[gd_scene load_steps=30 format=3 uid="uid://drtkuhohyhd7y"]

[ext_resource type="Script" uid="uid://i5vh5c34pinp" path="res://main.gd" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://cwxsurn25xrva" path="res://chars/players/player.tscn" id="1_ig7tw"]
[ext_resource type="Resource" uid="uid://7pcl2k4pm55d" path="res://chars/players/stats/striker.tres" id="2_0xm2m"]
[ext_resource type="Texture2D" uid="uid://8260y6i3s2lg" path="res://sprites/Battleground3.png" id="2_4c57u"]
[ext_resource type="PackedScene" uid="uid://ck67bmr7jicmn" path="res://chars/enemies/enemy.tscn" id="2_7mycd"]
[ext_resource type="Script" uid="uid://wr0gogv12wnh" path="res://chars/players/stats/skill.gd" id="3_5vw27"]
[ext_resource type="FontFile" uid="uid://dac2xhqm7k4om" path="res://fonts/nes.ttf" id="3_w48qg"]
[ext_resource type="Resource" uid="uid://dvtk710t8shh7" path="res://chars/players/stats/defence.tres" id="4_1bvp3"]
[ext_resource type="Script" uid="uid://benuj1836edrx" path="res://chars/players/stats/stats.gd" id="4_kek77"]
[ext_resource type="Texture2D" uid="uid://beja6hy0fpi3v" path="res://sprites/characters/chars_6.png" id="4_vivmo"]
[ext_resource type="Resource" uid="uid://i30gl3l5mqyf" path="res://chars/players/stats/curator.tres" id="5_lquwl"]
[ext_resource type="Texture2D" uid="uid://q4g1c2sgdctr" path="res://sprites/goblin.png" id="6_ycdy4"]
[ext_resource type="Texture2D" uid="uid://dp6u124vswmtq" path="res://sprites/New_Piskel.png" id="7_w48qg"]
[ext_resource type="Texture2D" uid="uid://bvywvb1mxtug1" path="res://sprites/characters.png" id="8_efxa6"]
[ext_resource type="Texture2D" uid="uid://dr6h8wuopg277" path="res://icon.svg" id="9_kek77"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5vw27"]
bg_color = Color(1, 0, 0, 1)
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kek77"]
bg_color = Color(0.0655921, 0.787194, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ycdy4"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2cqfq"]
content_margin_left = 0.0
texture = ExtResource("4_vivmo")
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
region_rect = Rect2(0, 0, 16.3301, 15.182)

[sub_resource type="Resource" id="Resource_5vw27"]
script = ExtResource("3_5vw27")
id = "Scream"
power = 1.0
stamina_consumed = 1
description = ""
emotion = "Angry"
metadata/_custom_type_script = "uid://wr0gogv12wnh"

[sub_resource type="Resource" id="Resource_kek77"]
script = ExtResource("3_5vw27")
id = "Strong Scream"
power = 3.0
stamina_consumed = 3
description = ""
emotion = "Angry"
metadata/_custom_type_script = "uid://wr0gogv12wnh"

[sub_resource type="Resource" id="Resource_4c57u"]
script = ExtResource("4_kek77")
id = 0
name_char = "Goblin"
role = "Striker"
stamina = 2.0
will = 1
control = 1
actions = Array[ExtResource("3_5vw27")]([SubResource("Resource_5vw27"), SubResource("Resource_kek77")])
metadata/_custom_type_script = "uid://benuj1836edrx"

[sub_resource type="Resource" id="Resource_dg77c"]
script = ExtResource("3_5vw27")
id = "Scary"
power = 1.0
stamina_consumed = 1
description = ""
emotion = "Scary"
metadata/_custom_type_script = "uid://wr0gogv12wnh"

[sub_resource type="Resource" id="Resource_ycdy4"]
script = ExtResource("3_5vw27")
id = "Intimidation"
power = 2.0
stamina_consumed = 2
description = ""
emotion = "Scary"
metadata/_custom_type_script = "uid://wr0gogv12wnh"

[sub_resource type="Resource" id="Resource_efxa6"]
script = ExtResource("4_kek77")
id = 1
name_char = "Blobby"
role = "Defence"
stamina = 2.0
will = 1
control = 1
actions = Array[ExtResource("3_5vw27")]([SubResource("Resource_dg77c"), SubResource("Resource_ycdy4")])
metadata/_custom_type_script = "uid://benuj1836edrx"

[sub_resource type="Resource" id="Resource_w48qg"]
script = ExtResource("3_5vw27")
id = "Scream"
power = 1.0
stamina_consumed = 1
description = ""
emotion = "Angry"
metadata/_custom_type_script = "uid://wr0gogv12wnh"

[sub_resource type="Resource" id="Resource_vivmo"]
script = ExtResource("3_5vw27")
id = "Strong Scream"
power = 3.0
stamina_consumed = 3
description = ""
emotion = "Angry"
metadata/_custom_type_script = "uid://wr0gogv12wnh"

[sub_resource type="Resource" id="Resource_2cqfq"]
script = ExtResource("4_kek77")
id = 2
name_char = "Goblin"
role = "Striker"
stamina = 2.0
will = 1
control = 1
actions = Array[ExtResource("3_5vw27")]([SubResource("Resource_w48qg"), SubResource("Resource_vivmo")])
metadata/_custom_type_script = "uid://benuj1836edrx"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ycdy4"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 1, 1, 1)

[node name="Main" type="Node2D" node_paths=PackedStringArray("players", "enemies", "buttons_cure", "button_players")]
script = ExtResource("1_h2yge")
combination_1 = "happytrustlove"
combination_2 = "trustlove"
players = [NodePath("CanvasLayer/Control/Player"), NodePath("CanvasLayer/Control/Player2"), NodePath("CanvasLayer/Control/Player3")]
enemies = [NodePath("CanvasLayer/Control/Enemy"), NodePath("CanvasLayer/Control/Enemy2"), NodePath("CanvasLayer/Control/Enemy3")]
buttons_cure = [NodePath("CanvasLayer/Control/Player/Cure"), NodePath("CanvasLayer/Control/Player2/Cure_2"), NodePath("CanvasLayer/Control/Player3/Cure_3")]
button_players = [NodePath("CanvasLayer/Control/Player/Player"), NodePath("CanvasLayer/Control/Player2/Player2"), NodePath("CanvasLayer/Control/Player3/Player3")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(956, 543)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_4c57u")

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 52.0
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxFlat_5vw27")
theme_override_styles/fill = SubResource("StyleBoxFlat_kek77")
min_value = -10.0
max_value = 10.0
step = 1.0
rounded = true
show_percentage = false

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/ProgressBar"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 3.0
offset_bottom = 44.0
grow_horizontal = 2
alignment = 1

[node name="0" type="Label" parent="CanvasLayer/Control/ProgressBar/HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("3_w48qg")
theme_override_font_sizes/font_size = 35
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="10" type="Label" parent="CanvasLayer/Control/ProgressBar/HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_w48qg")
theme_override_font_sizes/font_size = 35
text = "/10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="0s" type="ProgressBar" parent="CanvasLayer/Control/ProgressBar"]
texture_filter = 1
layout_mode = 2
offset_left = 1018.0
offset_top = 18.0
offset_right = 1180.0
offset_bottom = 33.0
size_flags_horizontal = 3
theme_override_styles/background = SubResource("StyleBoxEmpty_ycdy4")
theme_override_styles/fill = SubResource("StyleBoxTexture_2cqfq")
max_value = 10.0
show_percentage = false

[node name="Enemy" parent="CanvasLayer/Control" instance=ExtResource("2_7mycd")]
position = Vector2(1321, 634)
stats = SubResource("Resource_4c57u")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Control/Enemy"]
texture_filter = 1
scale = Vector2(4.844, 5.625)
texture = ExtResource("6_ycdy4")

[node name="Enemy2" parent="CanvasLayer/Control" instance=ExtResource("2_7mycd")]
position = Vector2(999, 616)
stats = SubResource("Resource_efxa6")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Control/Enemy2"]
texture_filter = 1
scale = Vector2(6.7647, 7.5625)
texture = ExtResource("7_w48qg")
region_enabled = true
region_rect = Rect2(0, 31.5, 34, 32.5)

[node name="Enemy3" parent="CanvasLayer/Control" instance=ExtResource("2_7mycd")]
position = Vector2(685, 626)
stats = SubResource("Resource_2cqfq")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Control/Enemy3"]
texture_filter = 1
scale = Vector2(4.84375, 5.625)
texture = ExtResource("6_ycdy4")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 0
offset_top = 560.0
offset_right = 239.0
offset_bottom = 884.0
theme_override_constants/separation = 255

[node name="Name Enemies" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_w48qg")
theme_override_font_sizes/font_size = 35
text = "ccccccc"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Turn" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_w48qg")
theme_override_font_sizes/font_size = 35
text = "Turno "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player" parent="CanvasLayer/Control" instance=ExtResource("1_ig7tw")]
y_sort_enabled = true
texture_filter = 1
position = Vector2(685, 786)
stats = ExtResource("2_0xm2m")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Control/Player"]
scale = Vector2(5.115, 5.66379)
texture = ExtResource("8_efxa6")
region_enabled = true
region_rect = Rect2(37.8569, 31.5, 17.6262, 32.0689)

[node name="Player" type="Button" parent="CanvasLayer/Control/Player"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -88.0
offset_right = 46.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Cure" type="Button" parent="CanvasLayer/Control/Player"]
visible = false
texture_filter = 1
offset_left = -269.0
offset_top = 3.0
offset_right = -121.0
offset_bottom = 57.0
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_w48qg")
theme_override_font_sizes/font_size = 35
text = "Heal Felix"
flat = true

[node name="Action_Label" type="Label" parent="CanvasLayer/Control/Player"]
visible = false
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = -125.0
offset_right = 51.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_w48qg")
theme_override_font_sizes/font_size = 35
text = "fff"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player2" parent="CanvasLayer/Control" instance=ExtResource("1_ig7tw")]
texture_filter = 1
position = Vector2(999, 786)
stats = ExtResource("4_1bvp3")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Control/Player2"]
texture_filter = 1
scale = Vector2(5.115, 5.664)
texture = ExtResource("8_efxa6")
region_enabled = true
region_rect = Rect2(5.021, -0.329931, 19.767, 32.275)

[node name="Player2" type="Button" parent="CanvasLayer/Control/Player2"]
modulate = Color(1, 1, 1, 0)
offset_left = -48.0
offset_top = -90.0
offset_right = 51.0
offset_bottom = 74.0
flat = true

[node name="Cure_2" type="Button" parent="CanvasLayer/Control/Player2"]
visible = false
offset_left = -227.0
offset_top = 3.0
offset_right = -68.0
offset_bottom = 53.0
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_w48qg")
theme_override_font_sizes/font_size = 35
text = "Heal Bor"
flat = true

[node name="Action_Label2" type="Label" parent="CanvasLayer/Control/Player2"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -112.0
offset_right = 60.0
offset_bottom = -69.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_w48qg")
theme_override_font_sizes/font_size = 35
text = "fff"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player3" parent="CanvasLayer/Control" instance=ExtResource("1_ig7tw")]
texture_filter = 1
position = Vector2(1321, 786)
stats = ExtResource("5_lquwl")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Control/Player3"]
texture_filter = 1
scale = Vector2(5.115, 5.664)
texture = ExtResource("8_efxa6")
region_enabled = true
region_rect = Rect2(71, -0.0760153, 22.117, 32.275)

[node name="Player3" type="Button" parent="CanvasLayer/Control/Player3"]
modulate = Color(1, 1, 1, 0)
offset_left = -54.0
offset_top = -91.0
offset_right = 56.0
offset_bottom = 74.0
flat = true

[node name="Cure_3" type="Button" parent="CanvasLayer/Control/Player3"]
visible = false
offset_left = -234.0
offset_top = 3.0
offset_right = -61.0
offset_bottom = 53.0
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_w48qg")
theme_override_font_sizes/font_size = 35
text = "Heal Nayeli"
flat = true

[node name="Action_Label3" type="Label" parent="CanvasLayer/Control/Player3"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -122.0
offset_right = 35.0
offset_bottom = -79.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_w48qg")
theme_override_font_sizes/font_size = 35
text = "fff"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -207.0
offset_right = -549.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_ycdy4")

[node name="Image" type="TextureRect" parent="CanvasLayer/Control/Panel"]
layout_mode = 2
offset_left = 19.0
offset_top = 21.0
offset_right = 206.0
offset_bottom = 188.0
texture = ExtResource("9_kek77")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 254.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 70

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/Panel/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Name" type="Label" parent="CanvasLayer/Control/Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_w48qg")
theme_override_font_sizes/font_size = 35
text = "Name"
vertical_alignment = 1

[node name="Role" type="Label" parent="CanvasLayer/Control/Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_w48qg")
theme_override_font_sizes/font_size = 35
text = "Role"
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Stamina" type="Label" parent="CanvasLayer/Control/Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_w48qg")
theme_override_font_sizes/font_size = 35
text = "Stamina"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StaMin" type="Label" parent="CanvasLayer/Control/Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_w48qg")
theme_override_font_sizes/font_size = 35
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StaMax" type="Label" parent="CanvasLayer/Control/Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_w48qg")
theme_override_font_sizes/font_size = 35
text = "/10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control/Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Will" type="Label" parent="CanvasLayer/Control/Panel/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_w48qg")
theme_override_font_sizes/font_size = 35
text = "Will"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WillV" type="Label" parent="CanvasLayer/Control/Panel/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_w48qg")
theme_override_font_sizes/font_size = 35
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/Control/Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Control" type="Label" parent="CanvasLayer/Control/Panel/HBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_w48qg")
theme_override_font_sizes/font_size = 35
text = "Control"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ControlV" type="Label" parent="CanvasLayer/Control/Panel/HBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_w48qg")
theme_override_font_sizes/font_size = 35
text = "0"

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/Control/Panel/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Action" type="Button" parent="CanvasLayer/Control/Panel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_w48qg")
theme_override_font_sizes/font_size = 35
text = "Action"
flat = true

[node name="Rest" type="Button" parent="CanvasLayer/Control/Panel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_w48qg")
theme_override_font_sizes/font_size = 35
text = "Rest"
flat = true

[node name="Flee" type="Button" parent="CanvasLayer/Control/Panel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_w48qg")
theme_override_font_sizes/font_size = 35
disabled = true
text = "Flee"
flat = true

[node name="VBoxContainer3" type="VBoxContainer" parent="CanvasLayer/Control/Panel/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer4" type="VBoxContainer" parent="CanvasLayer/Control/Panel/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Start" type="Button" parent="CanvasLayer/Control/Panel/HBoxContainer/VBoxContainer4"]
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_w48qg")
theme_override_font_sizes/font_size = 35
disabled = true
text = "Start"
flat = true

[node name="Hug" type="Button" parent="CanvasLayer/Control/Panel/HBoxContainer/VBoxContainer4"]
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_w48qg")
theme_override_font_sizes/font_size = 35
disabled = true
text = "Hug "
flat = true

[node name="Dance" type="Button" parent="CanvasLayer/Control/Panel/HBoxContainer/VBoxContainer4"]
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_w48qg")
theme_override_font_sizes/font_size = 35
disabled = true
text = "Dance"
flat = true

[node name="VBoxContainer5" type="VBoxContainer" parent="CanvasLayer/Control/Panel/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Panel2" type="Panel" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -146.0
offset_top = -95.0
offset_right = 148.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2

[node name="Vbox" type="VBoxContainer" parent="CanvasLayer/Control/Panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -146.0
offset_top = -94.5
offset_right = 146.0
offset_bottom = 94.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="CanvasLayer/Control/Panel2/Vbox"]
texture_filter = 1
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_w48qg")
theme_override_font_sizes/font_size = 45
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartGame" type="Button" parent="CanvasLayer/Control/Panel2/Vbox"]
texture_filter = 1
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_w48qg")
theme_override_font_sizes/font_size = 38
text = "Start"
flat = true

[node name="Quit" type="Button" parent="CanvasLayer/Control/Panel2/Vbox"]
texture_filter = 1
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_w48qg")
theme_override_font_sizes/font_size = 38
text = "Quit"
flat = true

[connection signal="pressed" from="CanvasLayer/Control/Player/Player" to="." method="_on_player_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Player/Cure" to="." method="_on_cure_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Player2/Player2" to="." method="_on_player_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Player2/Cure_2" to="." method="_on_cure_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Player3/Player3" to="." method="_on_player_3_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Player3/Cure_3" to="." method="_on_cure_3_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Panel/HBoxContainer/VBoxContainer2/Action" to="." method="_on_action_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Panel/HBoxContainer/VBoxContainer2/Rest" to="." method="_on_rest_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Panel/HBoxContainer/VBoxContainer4/Start" to="." method="_on_start_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Control/Panel/HBoxContainer/VBoxContainer4/Hug" to="." method="_on_hug_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Control/Panel/HBoxContainer/VBoxContainer4/Hug" to="." method="_on_hug_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Control/Panel/HBoxContainer/VBoxContainer4/Hug" to="." method="_on_hug_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Control/Panel/HBoxContainer/VBoxContainer4/Dance" to="." method="_on_dance_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Control/Panel/HBoxContainer/VBoxContainer4/Dance" to="." method="_on_dance_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Control/Panel/HBoxContainer/VBoxContainer4/Dance" to="." method="_on_dance_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Panel2/Vbox/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Panel2/Vbox/Quit" to="." method="_on_quit_pressed"]
